<resources>
    <string name="yl_device_module_name">device module</string>
    <string name="yl_device_description">Description</string>
    <string name="yl_device_status">Status</string>
    <string name="yl_device_malfunction">malfunction</string>
    <string name="yl_device_normal">normal</string>
    <string name="yl_device_not_detected">not detected</string>
    <string name="yl_device_title_register_device">register device</string>
    <string name="yl_device_message_input_register_number">Pls input register number</string>
    <string name="yl_device_str_input_empty">input empty</string>
    <string name="yl_device_scan_QR_code_registration">scan QR code registration</string>
    <string name="yl_device_registering">Registering</string>
    <string name="yl_device_permission_camera_and_vibrate_rationale">To use QR code to scan and register the device, you need to turn on the camera and the permission to vibrate. Please allow</string>
    <string name="yl_device_permission_camera_denied">The permission to open the camera has been denied. You will not be able to use the scanning function</string>
    <string name="yl_device_permission_camera_neverask">You have denied permission to allow the program to use the camera. If you need it, please open it in settings</string>
    <string name="yl_device_permission_vibrate_denied">Vibration permission has been denied, you will not be able to use the scanning function</string>
    <string name="yl_device_permission_vibrate_neverask">You have refused to allow the program to use the vibration permission. If you need to, please open it in the settings</string>
    <string name="yl_device_login_first">Login first</string>
    <string name="yl_device_task">task</string>
    <string name="yl_device_mappage">map</string>
    <string name="yl_device_control">control</string>

    <string name="yl_device_detail_info">detail info</string>
    <string name="yl_device_running_info">running info</string>
    <string name="yl_device_device_type">device type:</string>
    <string name="yl_device_device_status">device status:</string>
    <string name="yl_device_device_status_fault">fault</string>
    <string name="yl_device_device_status_normal">normal</string>
    <string name="yl_device_device_status_undetected">undetected</string>
    <string name="yl_device_device_battery_level">Battery level :</string>
    <string name="yl_device_device_charging_status">charging status:</string>
    <string name="yl_device_device_charging_status_uncharged">uncharged</string>
    <string name="yl_device_device_charging_status_manual_line_charging">manual line charging</string>
    <string name="yl_device_device_charging_status_auto_wireless_charging">auto wireless charging</string>
    <string name="yl_device_device_charging_status_no_charg_detected">no charg detected</string>
    <string name="yl_device_device_water_level">water level:</string>
    <string name="yl_device_device_add_water_status">add water status:</string>
    <string name="yl_device_device_add_water_status_no">No water added</string>
    <string name="yl_device_device_add_water_status_manual">Adding water manually</string>
    <string name="yl_device_device_add_water_status_auto">Adding water automatically</string>
    <string name="yl_device_device_empty_trash_status">empty trash status:</string>
    <string name="yl_device_device_empty_trash_status_no">Not dumping</string>
    <string name="yl_device_device_empty_trash_status_doing">Dumping trash</string>
    <string name="yl_device_device_running_status">device running status:</string>
    <string name="yl_device_device_running_status_no">not run</string>
    <string name="yl_device_device_running_status_running">running</string>
    <string name="yl_device_main_sweep_status">main sweep:</string>
    <string name="yl_device_side_sweep_status">side sweep:</string>
    <string name="yl_device_sprinkling_water_status">sprinkling water:</string>
    <string name="yl_device_alarm_light_status">alarm light:</string>
    <string name="yl_device_front_light_status">front light:</string>
    <string name="yl_device_tail_light_status">tail light:</string>
    <string name="yl_device_left_tail_light_status">left tail light:</string>
    <string name="yl_device_right_tail_light_status">right tail light:</string>
    <string name="yl_device_device_status_turn_on">turn on</string>
    <string name="yl_device_device_status_turn_off">turn off</string>
    <string name="yl_device_add_rechange_point">Please add charging point first</string>
    <string name="yl_device_get_clean_task">Getting clean task list</string>
    <string name="yl_device_clean_task">clean task</string>
    <string name="yl_device_patrol_task">patrol task</string>
    <string name="yl_device_config_basic_setting">basic settings</string>
    <string name="yl_device_enable_auto_task">enable auto task</string>
    <string name="yl_device_enable_auto_recharge">enable auto recharge</string>
    <string name="yl_device_enable_auto_add_water">enable auto recharge</string>
    <string name="yl_device_enable_auto_empty_trash">enable auto empty trash</string>
    <string name="yl_device_config_battery_low_limit">Low battery auto charging(%):</string>
    <string name="yl_device_config_water_low_limit">Low water auto addition(%):</string>
    <string name="yl_device_config_empty_trash_interval">Dumping interval (minutes):</string>
    <string name="yl_device_please_select_a_map">please select a map</string>
    <string name="yl_device_task_name">task name</string>
    <string name="yl_device_task_desc">task description</string>
    <string name="yl_device_task_type">task type</string>
    <string name="yl_device_virtual_track_group">virtual track group</string>
    <string name="yl_device_task_priority">task priority</string>
    <string name="yl_device_trace_path_priority">trace path priority</string>
    <string name="yl_device_virtual_track_group_priority">virtual track group priority</string>
    <string name="yl_device_special_work_priority">special work priority</string>
    <string name="yl_device_task_start_time">start time</string>
    <string name="yl_device_task_option">task option</string>
    <string name="yl_device_only_once">only once</string>
    <string name="yl_device_everyday">everyday</string>
    <string name="yl_device_infinite_cycle">infinite cycle</string>
    <string name="yl_device_special_work">special work</string>
    <string name="yl_device_task_choice_tips">trace path/virtual track group/special work/auto coverage must be one of four</string>
    <string name="yl_device_repeat">repeat</string>
    <string name="yl_device_start_time">start time</string>
    <string name="yl_device_task_status">task status</string>
    <string name="yl_device_task_progress">task progress</string>
    <string name="yl_device_execute">execute</string>
    <string name="yl_device_delete_task">delete task</string>
    <string name="yl_device_update_task">update task</string>
    <string name="yl_device_in_progress">In progress...</string>
    <string name="yl_device_not_started_yet">Not started</string>
    <string name="yl_device_delete_task_confirm">Are you sure you want to delete the task(%1$s)?</string>
    <string name="yl_device_task_detail_info">task detail info</string>
    <string name="yl_device_delete_mappage_confirm">Are you sure you want to delete the map(%1$s)?</string>
    <string name="yl_device_control_of_work">Set current task</string>
    <string name="yl_device_run">run</string>
    <string name="yl_device_go_to_garage">go to garage</string>
    <string name="yl_device_go_to_recharge">go to recharge</string>
    <string name="yl_device_go_to_add_water">go to add water</string>
    <string name="yl_device_go_to_empty_trash">go to empty trash</string>
    <string name="yl_device_control_of_cleaning_parts">control of clean parts</string>
    <string name="yl_device_main_sweep">main sweep</string>
    <string name="yl_device_side_sweep">side sweep</string>
    <string name="yl_device_left_tail_light">left tail light</string>
    <string name="yl_device_right_tail_light">right tail light</string>
    <string name="yl_device_sprinkling_water">sprinkling water</string>
    <string name="yl_device_alarm_light">alarm light</string>
    <string name="yl_device_front_light">front light</string>
    <string name="yl_device_horn">horn</string>
    <string name="yl_device_suck_fan">suck fan</string>
    <string name="yl_device_vibrating_dust">vibrating dust</string>
    <string name="yl_device_motor">motor free</string>
    <string name="yl_device_garbage_valve">garbage valve</string>
    <string name="yl_device_emergency_stop">emergency stop</string>
    <string name="yl_device_account_format_error">account format error</string>
    <string name="yl_device_account_not_exist">account not exist</string>
    <string name="yl_device_complete">Completed</string>
    <string name="yl_device_run_log">log</string>
    <string name="yl_device_at_spot">On task target spot</string>
    <string name="yl_device_no_spot">Not find task target spot</string>
    <string name="yl_device_on_the_way">On the way to the task</string>
    <string name="yl_device_pause">Task pause</string>
    <string name="yl_device_stop">Task stop</string>
    <string name="yl_device_error">Task error</string>
    <string name="yl_device_permission_location">To display the device location, you need to obtain the location information permission. Please allow</string>
    <string name="yl_device_permission_location_denied">Location information permission denied, you will not be able to display personal location information</string>
    <string name="yl_device_permission_location_neverask">You have denied permission to allow the program to use location information. If you need it, please open it in settings</string>
    <string name="yl_device_exception_notice_title">sweeper fault notice</string>
    <string name="yl_device_exception_notice_text">Fault info: %1$s, Click to view the inspection method</string>
    <string name="yl_device_fault_check">Fault check</string>
    <string name="yl_device_exception_device_text">Fault device: %1$s</string>
    <string name="yl_device_fault_info">Fault info</string>
    <string name="yl_device_low_battery_notice_title">sweeper low battery notice</string>
    <string name="yl_device_low_battery_device_text">Device(%1$s)battery level：%2$s, Please charge in time!</string>
    <string name="yl_device_grant_device">grant device</string>
    <string name="yl_device_grant">device grant</string>
    <string name="yl_device_cannot_grant">This device is not authorized</string>
    <string name="yl_device_auto_coverage_area">Automatic coverage of area</string>
    <string name="yl_device_connected">connected</string>
    <string name="yl_device_disconnect">disconnect</string>
    <string name="yl_device_add_device_success">add device success</string>
    <string name="yl_device_location">location</string>
</resources>
