<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="@dimen/yl_common_margin_5"
    android:background="@drawable/yl_common_block_background"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ImageView
        android:id="@+id/iv_clean_task_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/yl_common_padding_5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <LinearLayout
        android:id="@+id/ll_task_name_desc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/yl_common_padding_5"
        app:layout_constraintStart_toEndOf="@id/iv_clean_task_image"
        app:layout_constraintTop_toTopOf="@id/iv_clean_task_image"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_clean_task_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"/>

        <TextView
            android:id="@+id/tv_clean_task_description"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:ellipsize="marquee"
            android:singleLine="true"
            android:textSize="15sp"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_task_repeat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/iv_clean_task_image"
        app:layout_constraintTop_toBottomOf="@id/ll_task_name_desc"
        android:visibility="gone"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/yl_device_repeat"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=": "/>
        <TextView
            android:id="@+id/tv_clean_task_repeat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_task_start_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/iv_clean_task_image"
        app:layout_constraintTop_toBottomOf="@id/ll_task_repeat"
        android:visibility="gone"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/yl_device_start_time"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=": "/>
        <TextView
            android:id="@+id/tv_clean_task_start_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_task_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/iv_clean_task_image"
        app:layout_constraintTop_toBottomOf="@id/ll_task_start_time"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/yl_device_task_status"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=": "/>
        <TextView
            android:id="@+id/tv_clean_task_exec_status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_task_progress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/iv_clean_task_image"
        app:layout_constraintTop_toBottomOf="@id/ll_task_status"
        android:visibility="gone"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/yl_device_task_progress"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=": "/>
        <TextView
            android:id="@+id/tv_clean_task_progress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </LinearLayout>

    <Button
        android:id="@+id/btn_execute"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginEnd="5dp"
        android:background="@drawable/yl_common_button_background"
        android:visibility="gone"
        android:text="@string/yl_device_execute"/>

</androidx.constraintlayout.widget.ConstraintLayout>